# isoproxy

./: .env.example  .gitignore  LICENSE  README.md  REFACTOR_SUMMARY.md  pyproject.toml  specs.md
deployment/: .env.example  config.env.example  isoproxy-socket.service  isoproxy.service  nftables-isoproxy.conf  nftables-llmproxy.conf  secrets.env.example
docs/: safe-pass-through-design.md  safe-pass-through-spec.md
src/isoproxy/: __init__.py  config.py  errors.py  main.py  models.py  proxy.py  validation.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_proxy.py  test_validation.py
